task_2/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-canary
  labels:
    app: nginx
    state: canary

spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      state: canary

  template:
    metadata:
      labels:
        app: nginx
        state: canary

    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html/index.html
            subPath: index-canary.html
            name: nginx-canary
      volumes:
      - name: nginx-canary
        configMap:
          name: nginx-canary
