task_2/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-canary
  labels:
    app: nginx

spec:
  type: ClusterIP
  selector:
    state: canary
  ports:
    - protocol  : TCP
      port      : 80
      targetPort: 80
