task_2/service-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-main
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
    state: main
  ports:
    - protocol  : TCP
      port      : 80
      targetPort: 80
